pkg/manifestclienttest/testdata/must-gather-01/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/multus.openshift.io.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
  creationTimestamp: "2023-12-06T09:20:03Z"
  generation: 2
  labels:
    app: multus-admission-controller
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:service.beta.openshift.io/inject-cabundle: {}
        f:labels:
          f:app: {}
        f:ownerReferences:
          k:{"uid":"d9e93da9-6756-4cb7-9352-95de1620eeea"}: {}
      f:webhooks:
        k:{"name":"multus-validating-config.k8s.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            f:service:
              f:name: {}
              f:namespace: {}
              f:path: {}
          f:name: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
    manager: cluster-network-operator/operconfig
    operation: Apply
    time: "2023-12-06T09:20:03Z"
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:webhooks:
        k:{"name":"multus-validating-config.k8s.io"}:
          f:clientConfig:
            f:caBundle: {}
    manager: service-ca-operator
    operation: Update
    time: "2023-12-06T09:21:12Z"
  name: multus.openshift.io
  ownerReferences:
  - apiVersion: operator.openshift.io/v1
    blockOwnerDeletion: true
    controller: true
    kind: Network
    name: cluster
    uid: d9e93da9-6756-4cb7-9352-95de1620eeea
  resourceVersion: "5763"
  uid: 3a391f11-e3f7-4163-9c1a-7cd6a27b7e77
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJVDFFZTdBalhNa2N3RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRjd01UZzFORFEyT1RBZQpGdzB5TXpFeU1EWXdPVEl4TURsYUZ3MHlOakF5TURNd09USXhNVEJhTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTNNREU0TlRRME5qa3dnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQ3IwRm1QRlA2dm8ydXd6ZG5UaTQyeVRtOU1kVWlBQng2Lwp1aVhLWXJvalcxYj [...]
    service:
      name: multus-admission-controller
      namespace: openshift-multus
      path: /validate
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: multus-validating-config.k8s.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - k8s.cni.cncf.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - network-attachment-definitions
    scope: '*'
  sideEffects: NoneOnDryRun
  timeoutSeconds: 30
